* `AboutController(StreamDeployer streamDeployer, LauncherRepository launcherRepository, FeaturesProperties featuresProperties,
VersionInfoProperties versionInfoProperties, SecurityStateBean securityStateBean, DataflowMetricsProperties monitoringProperties)` constructor was removed.
* `search` query parameter for filtering  `/tasks/definitions` by task name has been removed.  Use the `taskName` query parameter.
* The following deprecated methods for `JobService` have been removed:
** launch
** getLastJobParameters
** restart
** abandon
** listJobs(int start, int count)
** countJobs
** countJobInstances
** countStepExecutionsForJobExecution
** stopAll
** getStepNamesForJob
* The following deprecated `Converters` have been removed from SCDF: `AbstractDateTimeConverter`, `DateToStringConverter`, and `StringToDateConverter`.  Use the converters provided by Spring Batch.
* `findByTaskNameContainsAndDslTextContains` deprecated method has been removed from `TaskDefinitionRepository`.
* `DockerComposeRule.waitingForService(String serviceName, HealthCheck<Container> healthCheck)` has been replaced by `DockerComposeRule.waitingForService(String serviceName, HealthCheck<Container> healthCheck, ReadableDuration timeout)`.
* The deprecated `rollback(String releaseName, int releaseVersion)` method in SkipperClient has been removed.  Use  `rollback(RollbackRequest rollbackRequest).
* Removed the `DefaultTaskExecutionService` constructor that does not take the `composedTaskRunnerConfigurationProperties` parameter.  Use the constructor that offers the `composedTaskRunnerConfigurationProperties` parameter.
* * Removed the `DefaultTaskExecutionInfoService` constructor that does not take the `composedTaskRunnerConfigurationProperties` parameter.  Use the constructor that offers the `composedTaskRunnerConfigurationProperties` parameter.
=== Breaking Changes
Announce deprecated changes here
